--- a/styles/Hero.module.css
+++ b/styles/Hero.module.css
@@ -8,6 +8,7 @@
     display: flex;
     gap: 2rem;
     flex-direction: column;
+    z-index: 2;
 }
 
 .cherryDiv {
@@ -55,6 +56,7 @@
 .right {
     position: relative;
     display: block ;
+    z-index: 1;
 }
 .rightmobile
 {
