--- a/styles/Food.module.css
+++ b/styles/Food.module.css
@@ -3,7 +3,8 @@
     display: flex;
     padding: 2rem;
     gap: 5rem;
-    margin-top: 2.5rem ;
+    /* margin-top: 2.5rem ; */
+    flex-direction: row;
 }
 .imageWrapper
 {
@@ -39,6 +40,7 @@
     font-size: 1.6rem;
     font-weight: 600;
     gap:3rem;
+    margin: 0.4rem 0;
 }
 .counter
 {
@@ -49,8 +51,12 @@
 .btn
 {
     font-weight: normal;
-    padding: 0.5rem 1rem;
-    font-size: 1rem;
+    padding: 1rem 1rem;
+    font-size: 1.1rem;
+    width: 50%;
+    border-radius: 6px;
+    text-align: center;
+    font-weight: bold;
 
 }
 @media only screen and (max-width: 900px) and (min-width: 730px)  {
@@ -68,4 +74,42 @@
         font-size: 2rem;
         gap: 1rem;
     }
+}
+@media only screen and (max-width: 729px) {
+    .container
+{
+    flex-direction: column;
+    gap:1rem;
+    padding: 0 1.5rem;
+}
+.imageWrapper
+{
+    position: relative;
+    width:100%;
+    height: 25rem;
+    overflow: hidden;
+    border-radius: 1rem;
+    height: 13rem;
+}
+.right
+{
+    font-size: 1.5rem;
+    font-weight: bold;
+}
+.right>:nth-child(2)
+{
+    font-size: 0.8rem;
+}
+.quantity
+{
+    font-size: 1.2rem;
+    gap:1.5rem;
+    margin: 0.4rem 0;
+}.btn
+{
+    margin-top: 1rem;
+    width: 100%;
+    border-radius: 6px;
+    padding: 0.7rem 1rem;
+}
 }
