--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -2,3 +2,9 @@
 {
     padding: 1rem 2rem;
 }
+@media only screen and (max-width: 729px) {
+    .container
+    {
+        padding: 1rem 0.8rem;
+    }
+}
