--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -10,8 +10,6 @@
     align-items: center;
     flex-direction: row;
     justify-content: space-evenly;
-    /* position: absolute;
-    bottom: 0; */
     width: 100%;
     
 }
@@ -50,6 +48,8 @@
 {
     margin-top: 1rem;
     gap:.5rem;
+    bottom: 0;
+    position: initial;
 }
 .container>span
 {
