--- a/styles/Cart.module.css
+++ b/styles/Cart.module.css
@@ -4,6 +4,8 @@
     display:grid;
     grid-template-columns: 2.2fr 1fr;
     grid-gap: 2rem;
+    font-size: 1rem;
+    height: 77vh;
 }
 .table
 {
@@ -82,4 +84,26 @@
     {
         width: 15rem;
     }
+}
+@media only screen and (max-width: 729px) {
+    .container
+    {
+        padding: 1rem;
+        font-size: 0.9rem;
+        flex-direction: column;
+        display: flex;
+        height: 77vh;
+    }
+    .cart
+    {
+        width: 100%;
+    }
+    .table
+{
+    margin: -1rem;
+}
+.cart
+{
+    height: 14rem;
+}
 }
