--- a/styles/Cart.module.css
+++ b/styles/Cart.module.css
@@ -5,7 +5,7 @@
     grid-template-columns: 2.2fr 1fr;
     grid-gap: 2rem;
     font-size: 1rem;
-    height: 77vh;
+    min-height: 77vh;
 }
 .table
 {
@@ -92,7 +92,7 @@
         font-size: 0.9rem;
         flex-direction: column;
         display: flex;
-        height: 77vh;
+        min-height: 77vh;
     }
     .cart
     {
