--- a/styles/Food.module.css
+++ b/styles/Food.module.css
@@ -19,6 +19,11 @@
     transform: scale(1.1);
    /* transition: all 0.5s ease-in-out; */
 }
+.description
+{
+    display:blockl;
+    text-align: justify;
+}
 .right
 {
     flex:1;
