--- a/styles/About.module.css
+++ b/styles/About.module.css
@@ -1,18 +1,21 @@
 .container
 {
     display: flex;
-    flex-direction: row;
-    align-items: center;
-    gap:4rem;
-    justify-content: center;
+    gap: 4.5rem;
     width: 100%;
     height: 100%;
+    padding: 2rem;
+    /* background-color: #fff1f1; */
+    background-color: #fff1f173;
+    flex-direction: row-reverse;
+    margin-top: 1rem;
 }
 .img
 {
     overflow: hidden;
-    border-radius: 50%;
-    border: 1px solid black;
+    border-radius: 10%;
+    display:contents ;
+ 
 }
 .content
 {
@@ -20,5 +23,24 @@
 }
 .content>p{
     text-align: justify !important;
+}
+.main>h1{
+    padding: 0 2rem;
+}
 
+@media only screen and (max-width: 729px) {
+    .container
+{
+    flex-direction: column;
+    gap: 1rem;
+    padding: 1rem;
+}
+.content>p{
+    font-size: 11px;
+}
+.content>h1
+{
+    font-size: 18px;
+    margin: 0;
+}
 }
