--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -15,6 +15,7 @@
     flex:1;
     cursor: pointer;
     padding-left: 0;
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
 .logo:hover{
     cursor: pointer;
@@ -54,6 +55,7 @@
     display: flex;
     cursor: pointer;
     z-index: 99;
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
 .badge
 {
@@ -78,6 +80,7 @@
     display: block;
     width: 30px;
     z-index: 1000;
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
 .menu{
     display: none;
