--- a/styles/Food.module.css
+++ b/styles/Food.module.css
@@ -37,7 +37,8 @@
 {
     font-size: 1.2rem;
     font-weight: normal;
-    color:var(--gray);
+    /* color:var(--gray); */
+    color: #000000a3;
 }
 .quantity
 {
@@ -68,6 +69,10 @@
     text-align: center;
     font-weight: bold;
 
+}
+.btn:active
+{
+  transform: scale(0.95);
 }
 @media only screen and (max-width: 900px) and (min-width: 730px)  {
     .container
