--- a/styles/Hero.module.css
+++ b/styles/Hero.module.css
@@ -25,6 +25,7 @@
     font-size: 0.8rem;
     color: var(--themeRed);
     font-weight: bold;
+    background-image: linear-gradient(to top, #fad0c4 0%, #ffd1ff 100%);
 }
 
 .heroText {
@@ -100,6 +101,7 @@
     box-shadow: var(--shadow);
     font-size: 1rem;
     z-index: 2;
+   
 }
 .btn:active
 {
@@ -145,6 +147,10 @@
     left: 25rem;
     width: max-content;
     z-index: 2;
+    background-color: #A9C9FF;
+    background-image: linear-gradient(180deg, #A9C9FF 0%, #FFBBEC 100%);
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
+    
 }
 .Pizza:active
 {
