--- a/styles/Hero.module.css
+++ b/styles/Hero.module.css
@@ -226,7 +226,8 @@
     .cherryDiv {
         margin: 0;
         padding: 0;
-        font-size: 0.6rem;
+        font-size: 0.4rem;
+        padding: 3px !important;
     }
 
     .heroText {
@@ -317,5 +318,10 @@
     .right
     {
         display: none;
+    }
+    .cherryIcon
+    {
+        width:28px;
+        height: 20px;
     }
 }
