--- a/styles/About.module.css
+++ b/styles/About.module.css
@@ -9,13 +9,13 @@
     background-color: #fff1f173;
     flex-direction: row-reverse;
     margin-top: 1rem;
-    border-radius: 2rem;
+    border-radius: 1px 50px;
 }
 .img
 {
     overflow: hidden;
-    border-radius: 10%;
-    display:contents ;
+    border-radius: 1px 50px;
+    /* display:contents ; */
  
 }
 .content
