--- a/styles/Hero.module.css
+++ b/styles/Hero.module.css
@@ -22,11 +22,33 @@
     margin-top: 3rem;
     padding: 1rem;
     border-radius: 2rem;
-    font-size: 0.8rem;
+    font-size: 1rem;
     color: var(--themeRed);
     font-weight: bold;
-    background-image: linear-gradient(to top, #fad0c4 0%, #ffd1ff 100%);
+   background-color: #FFDEE9;
+background-image: linear-gradient(0deg, #FFDEE9 0%, #B5FFFC 100%);
+cursor: pointer;
 }
+
+.cherryDiv:active
+{
+    transform: scale(0.95);
+    background-color: #f30101;
+    
+}
+.cherryDiv:hover
+{
+    cursor: pointer;
+    transform: scale(1.1);
+    transition: all 0.2s ease-in-out;
+}
+.cherryDiv
+{
+    box-shadow: var(--shadow);
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
+}
+
+
 
 .heroText {
     display: flex;
@@ -228,8 +250,17 @@
         margin: 0;
         padding: 0;
         font-size: 0.4rem;
-        padding: 3px !important;
+        padding: 5px !important;
+        
     }
+.cherryDiv
+{
+    box-shadow: var(--shadow);
+    -webkit-tap-highlight-color: rgba(168, 22, 22, 0);
+}
+
+
+
 
     .heroText {
         font-size: 1.1rem;
