--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,7 +9,7 @@ body {
   /* background: var(--background-color); */
   overflow-x:hidden;
   width: 100%;
-  /* height: 100vh; */
+  height: 100vh;
   scroll-behavior: smooth;
   background-color: #D9AFD9;
 background-image: linear-gradient(0deg, #D9AFD9 0%, #97D9E1 100%);
