--- a/styles/About.module.css
+++ b/styles/About.module.css
@@ -10,6 +10,8 @@
     flex-direction: row-reverse;
     margin-top: 1rem;
     border-radius: 1px 50px;
+    box-shadow: 0 0 10px 0 #0000001a;
+    transition-delay: 1s;
 }
 .img
 {
