--- a/styles/Hero.module.css
+++ b/styles/Hero.module.css
@@ -9,6 +9,7 @@
     gap: 2rem;
     flex-direction: column;
     z-index: 2;
+    width: 45%;
 }
 
 .cherryDiv {
@@ -20,7 +21,7 @@
     background-color: var(--pink);
     /* border: 1px solid black; */
     margin-top: 3rem;
-    padding: 1rem;
+    padding: 0.5rem 1rem;
     border-radius: 2rem;
     font-size: 1rem;
     color: var(--themeRed);
@@ -53,7 +54,7 @@ cursor: pointer;
 .heroText {
     display: flex;
     flex-direction: column;
-    font-size: 4rem;
+    font-size: 2.5rem;
     font-weight: bold;
 
 }
@@ -100,7 +101,7 @@ cursor: pointer;
     top: -5em;
     left: -5rem;
     z-index: 1; */
-    width: 38rem !important;
+    width: 32rem !important;
     position: absolute;
     top: -2em;
     left: 2rem;
@@ -123,7 +124,6 @@ cursor: pointer;
     box-shadow: var(--shadow);
     font-size: 1rem;
     z-index: 2;
-    right: -6rem;
    
 }
 .btn:active
@@ -211,12 +211,14 @@ cursor: pointer;
         display: flex;
     /* padding: 0 4rem; */
     justify-content: center;
+    position: relative;
     gap:2rem
     }
     .ContactUs
     {
         top: 3rem;
         left: 0rem;
+        position: absolute;
     }
     .heroText {
         font-size: 2rem;
@@ -252,9 +254,18 @@ cursor: pointer;
 
     .Pizza {
         
-    left: 9rem;
+    left: 20vw;
     bottom: 5rem;
 }
+.Pizza>:nth-child(2) {
+        font-size: 0.8rem;
+    }
+    .Pizza>:nth-child(1) {
+        width: 5rem;
+        height: 3rem;
+        border-radius: 0.5rem;
+        overflow: hidden;
+    }
 }
 
 @media only screen and (max-width: 729px) {
@@ -332,19 +343,19 @@ cursor: pointer;
         gap: .5rem;
         background-color: white;
         box-shadow: var(--shadow);
-        padding: 0.5rem;
+        padding: 4px;
         border-radius: 0.5rem;
         position: absolute;
-        bottom: 0rem;
-        left: -1.5rem;
+        bottom: 1rem;
+        left: 1rem;
         width: -webkit-max-content;
         width: -moz-max-content;
         width: max-content;
         z-index: 2;
     }
     .Pizza>:nth-child(1) {
-        width: 5rem;
-        height: 3rem;
+        width: 3.5rem;
+        height: 2.5rem;
     
     }
     
@@ -353,7 +364,7 @@ cursor: pointer;
         flex-direction: column;
         font-weight: bold;
         justify-content: space-between;
-        font-size: 14px;
+        font-size: 10px;
     }
     .rightmobile {
         position: relative;
