--- a/styles/Menu.module.css
+++ b/styles/Menu.module.css
@@ -37,7 +37,7 @@
     flex-wrap: wrap;
     row-gap: 2rem;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-between;
     margin-top: 2rem;
 }
 
