--- a/styles/Services.module.css
+++ b/styles/Services.module.css
@@ -27,6 +27,7 @@
     align-items: center;
     justify-content: center;
     flex-direction: row;
+    margin-bottom: 2rem;
 }
 
 .feature {
@@ -53,7 +54,7 @@
     text-align: center;
 }
 
-@media only screen and (max-width: 900px) and (min-width: 730px) {
+@media only screen and (max-width: 1280px) and (min-width: 730px) {
 
     .feature {
         width: 12rem;
@@ -61,6 +62,7 @@
 
     .feature>:nth-child(3) {
         width: 12rem;
+        font-size: 14px;
     }
 }
 
