--- a/styles/globals.css
+++ b/styles/globals.css
@@ -72,3 +72,7 @@ a {
   /* background-color: var(--themeRed); */
   background-image: linear-gradient(to right, #ff5070 0%, #f9748f 19%, #e6656c 60%, #ef553d 100%);
 }
+
+
+
+/* test */
