--- a/styles/Menu.module.css
+++ b/styles/Menu.module.css
@@ -1,10 +1,16 @@
 .container {
     display: flex;
     flex-direction: column;
-    gap: 3rem;
+    /* gap: 3rem; */
     margin-top: 0rem;
 }
-
+.category
+{
+    color: #6d2626;
+    text-align: center;
+    margin-top: 1rem;
+    margin-bottom: 0;
+}
 .heading {
     display: flex;
     flex-direction: column;
@@ -37,7 +43,8 @@
     flex-wrap: wrap;
     row-gap: 2rem;
     align-items: center;
-    justify-content: space-between;
+    /* justify-content: space-evenly; */
+    justify-content: center;
     margin-top: 2rem;
 }
 
@@ -49,6 +56,7 @@
     gap: 0.5rem;
     font-size: 1.5rem;
     font-weight: bold;
+    margin: 0 2rem;
 }
 
 .food>:nth-child(2),
@@ -75,6 +83,10 @@
     .food>:nth-child(3) {
         padding-left: 1rem;
         font-size: 1.4rem;
+    }
+    .menu
+    {
+        justify-content: space-evenly;
     }
 }
 
@@ -112,6 +124,10 @@
     .menu {
             row-gap: 1rem;
         }
+        .menu
+    {
+        justify-content: space-evenly;
+    }
         .food{
             /* max-width: 160px; */
             max-width: 40vw;;
