--- a/styles/Order.module.css
+++ b/styles/Order.module.css
@@ -22,7 +22,8 @@
     display: flex;
     flex-direction: row;
     gap: 1rem;
-    justify-content: space-between;
+    justify-content: space-evenly;
+    /* width: 100%; */
 }
 .container
 {
@@ -33,7 +34,7 @@
     justify-content: center;
     width: 100%;
     height: 100%;
-    margin-top: 3rem;
+    margin-top: 1rem;
 }
 .heading{
     font-size: 2rem;
@@ -111,8 +112,18 @@
     {
         width: 60%;
     }
+    .title
+    {
+        justify-content: space-evenly;
+        width: 100%;
+    }
 }
 @media only screen and (max-width: 729px) {
+    .title
+{
+    justify-content: space-evenly;
+    width: 100%;
+}
     .heading{
         font-size: 1.5rem;
     }
@@ -123,7 +134,7 @@
 .details
 {
     width: 80%;
-    font-size: 14px;
+    font-size: 0.6rem;
 }
 .statusContainer
     {
