--- a/styles/Login.module.css
+++ b/styles/Login.module.css
@@ -5,7 +5,29 @@
         filter: hue-rotate(360deg)
     }
 }
+.LoaderContainer
+{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    z-index: 1000;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.loader
+{
+    animation: animateBg 1s linear infinite;
+    margin:auto;
+    display: flex !important;
+    align-items: center;
+    justify-content: center;
+    z-index: 1000;
 
+
+} 
 .refer{
     color: black;
     cursor: pointer;
@@ -47,7 +69,7 @@
     flex-direction: row;
     align-items: end;
     margin: 0 auto;
-    margin-top: 5rem;
+    margin-top: 3rem;
     justify-content: center;
 }
 .icon{
