--- a/styles/404.module.css
+++ b/styles/404.module.css
@@ -29,8 +29,24 @@
     border-radius: 5px;
     transition: background-color 0.3s ease;
   }
-/*   
-  .backLink:hover {
-    background-color: #0056b3;
-  } */
+/* media query */
+  @media screen and (max-width: 768px) {
+    .errorHeading {
+      font-size: 1.5rem;
+    }
+  
+    .errorMessage {
+      font-size: 1rem;
+    }
+  }
+  
+  @media screen and (max-width: 480px) {
+    .errorHeading {
+      font-size: 1.2rem;
+    }
+  
+    .errorMessage {
+      font-size: 0.8rem;
+    }
+  } 
   
