--- a/styles/Login.module.css
+++ b/styles/Login.module.css
@@ -214,3 +214,11 @@
         margin-left: 6px;
         font-size: 0.9rem;
         }
+
+        .confirmationBox
+        {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+        }
+    
