--- a/styles/Cart.module.css
+++ b/styles/Cart.module.css
@@ -111,3 +111,10 @@
     height: 14rem;
 }
 }
+.emptyMsg{
+    color: red;
+    font-size: 3vh;
+    font-weight: 600;
+    text-align: center;
+    margin-top: 2rem;
+}
